--- a/SearchAndSort/SearchAndSort.csproj
+++ b/SearchAndSort/SearchAndSort.csproj
@@ -54,6 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Exceptions\NotInOrderException.cs" />
     <Compile Include="Search.cs" />
     <Compile Include="Sort.cs" />
     <Page Include="MainWindow.xaml">
@@ -96,6 +97,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
