Moved 'ParseSpaceDelimitedIntegers' helper method to dedicated helper class for unit testing purposes

--- a/SearchAndSort.Tests/SearchAndSort.Tests.csproj
+++ b/SearchAndSort.Tests/SearchAndSort.Tests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="HelperUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchUnitTests.cs" />
     <Compile Include="SortUnitTests.cs" />
