Included .NET-implemented sort method in Sort class and window; implemented basic sort and search method benchmark with stopwatch

--- a/SearchAndSort/SearchAndSort.csproj
+++ b/SearchAndSort/SearchAndSort.csproj
@@ -56,6 +56,7 @@
     </ApplicationDefinition>
     <Compile Include="Exceptions\NotInOrderException.cs" />
     <Compile Include="InputHelpers.cs" />
+    <Compile Include="IntArrayDescendingComparer.cs" />
     <Compile Include="Search.cs" />
     <Compile Include="Sort.cs" />
     <Page Include="MainWindow.xaml">
